--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 terraform.tfstate
 terraform.tfstate.backup
-.terraform/plugins/selections.json
-.terraform/plugins/registry.terraform.io/hashicorp/aws/3.6.0/darwin_amd64/terraform-provider-aws_v3.6.0_x5
+.terraform/
+
